final commit 7ess

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,7 +35,29 @@
             android:id="@+id/recycler_view_favorites"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"/>
+            android:layout_marginTop="15dp" />
+
+        <ImageView
+            android:id="@+id/image_park"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="75dp"
+            android:layout_alignTop="@+id/recycler_view_favorites"
+            android:layout_centerInParent="true"
+            android:src="@drawable/park"
+            android:visibility="invisible"/>
+        <TextView
+            android:id="@+id/text_parking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_parks_found"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/primary"
+            android:layout_below="@id/image_park"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+            />
 
     </RelativeLayout>
 
