--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,9 +7,12 @@
     tools:context=".HomeActivity">
 
     <FrameLayout
+        android:id="@+id/body_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/body_container"/>
+        android:layout_height="match_parent" />
+
+
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
