--- a/app/src/main/res/layout/activity_parking_place.xml
+++ b/app/src/main/res/layout/activity_parking_place.xml
@@ -93,8 +93,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
         android:layout_marginTop="130dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:background="@drawable/settings_background_shape2">
 
@@ -108,6 +108,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/book_btn"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_button"
+            android:text="Book"
+            android:textSize="15sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rv_parking" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -115,10 +128,9 @@
         android:id="@+id/circular_progress_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         android:indeterminate="true"
-        app:indicatorSize="50dp"
-        app:indicatorColor="@color/primaryVariant"/>
+        app:indicatorColor="@color/primaryVariant"
+        app:indicatorSize="50dp" />
 
 </RelativeLayout>
