--- a/app/src/main/res/layout/car_item.xml
+++ b/app/src/main/res/layout/car_item.xml
@@ -16,11 +16,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <com.google.android.material.button.MaterialButton
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_book_select"
-        style="@style/Widget.Material3.Button.OutlinedButton"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
