--- a/app/src/main/res/layout/activity_parking_place.xml
+++ b/app/src/main/res/layout/activity_parking_place.xml
@@ -113,13 +113,28 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_button"
-            android:text="Book"
+            android:text="@string/book"
             android:textSize="15sp"
             android:textStyle="bold|italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rv_parking" />
+
+        <Button
+            android:id="@+id/cancel_btn"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/custom_button"
+            android:text="@string/cancelBooking"
+            android:textSize="15sp"
+            android:textStyle="bold|italic"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/book_btn"
+            app:layout_constraintVertical_bias="0.262" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
