--- a/app/src/main/res/layout/activity_booking_qr.xml
+++ b/app/src/main/res/layout/activity_booking_qr.xml
@@ -31,8 +31,8 @@
 
         <RelativeLayout
             android:id="@+id/qr_relative_layout"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             app:layout_constraintBottom_toTopOf="@+id/description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -42,8 +42,8 @@
 
                 <ImageView
                     android:id="@+id/QrCode"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="230dp"
+                    android:layout_height="230dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +56,7 @@
             android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="200dp"
             android:textAlignment="center"
             android:textSize="16sp"
             android:textStyle="bold"
